<package>
  <name>cob_unified_scan_publisher</name>
  <version>0.5.1</version>
  <description>
    cob_unified_scan_publisher is a tool for unifying two laser scans into a single one.
    This has shown to provide better results for SLAM than using two laser scanners over a topic relay.
  </description>

  <maintainer email="frm@ipa.fraunhofer.de">Florian Mirus</maintainer>
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_unified_scan_publisher</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>laser_geometry</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>laser_geometry</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>